--- a/need/laydate.css
+++ b/need/laydate.css
@@ -18,6 +18,7 @@ html{_background-image:url(about:blank); _background-attachment:fixed;}
 .laydate-icon-dahong{background-image:url(../skins/dahong/icon.png)}
 .laydate-icon-molv{background-image:url(../skins/molv/icon.png)}
 .laydate_body .laydate_box{width:240px; font:12px '\5B8B\4F53'; z-index:99999999; *margin:-2px 0 0 -2px; *overflow:hidden; _margin:0; _position:absolute!important; background-color:#fff;}
+.laydate_box, .laydate_box div { box-sizing: content-box; }
 .laydate_body .laydate_box li{list-style:none;}
 .laydate_body .laydate_box .laydate_void{cursor:text!important;}
 .laydate_body .laydate_box a, .laydate_body .laydate_box a:hover{text-decoration:none; blr:expression(this.onFocus=this.blur()); cursor:pointer;}
